# contextagora

./: .dockerignore  .env.example  .envrc  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  STATUS.md  STATUS_BENCHMARK.md  docker-compose.yml  ideas.md  llms.txt  pyproject.toml
platform/: .dockerignore  Dockerfile  Makefile  pyproject.toml
platform/deploy/: .dockerignore  Dockerfile  README.md  docker-compose.yml
platform/e2e/: runner.py  sample_agent_run.py  scenarios.py
platform/frontend/: dot-preview.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
platform/frontend/src/: main.tsx  routeTree.gen.ts
platform/src/: .env.schema  commands.py  config.py  dev.py  llms.py  models.py  server.py
platform/src/context/: CLAUDE.md
platform/src/prompts/: _conventions.md  adapt_examples.md  add_integration.md  add_module.md  download.md  guide.md  improve_integration.md  introduction.md  llms.txt
platform/src/routes/: benchmarks.py  chat.py  commands.py  files.py  health.py  jobs.py  legacy_archived.py  linkedin.py  modules.py  onboarding.py  root_context.py  social_post.py  (+5 more)
platform/tests/: conftest.py  test_add_script.py  test_chat_mode_routing.py  test_chat_recording.py  test_chat_touched_modules.py  test_claude_service.py  test_claude_sessions.py  test_commands.py  test_config.py  test_create_module.py  test_git_repo_config.py  test_git_repo_list_module_files.py  test_jobs_routes.py  test_jobs_service.py  test_kind_specs.py  test_manifest.py  test_modules_archive.py  test_modules_routes.py  test_register.py  test_run_file.py  test_schemas.py  test_sessions_mode.py  test_sessions_store.py  test_social_post.py  test_task_scaffolding.py  test_transcript_recorder.py  test_tree_event_for_tool.py  test_tweet.py  test_validate_modules.py  test_validator_runtime.py  test_workflows_routes.py  test_workflows_service.py  test_workspace.py  test_workspace_flow.py  test_workspace_inspect.py
(+309 files in other folders)
