[project]
name = "contextagora"
version = "0.1.4"
description = "ContextAgora — context management for AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "python-multipart",
    "uvicorn",
    "httpx",
    "pyyaml>=6.0.3",
    "pydantic-settings",
]

[project.scripts]
start = "src.server:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = ["pytest>=9.0.2"]
